# ChangeLog for virtual/emacs
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*emacs-23 (09 Sep 2009)

  09 Sep 2009; Ulrich Mueller <ulm@gentoo.org> +emacs-23.ebuild,
  +metadata.xml:
  Add emacs-cedet-branch and emacs-lexbind to RDEPEND.
