@@ -1,3 +1,3 @@
-EBUILD emacs-23.ebuild 458 RMD160 b38922dfb2778bcf5369675707b1ee66544b2764 SHA1 42fc1567a84b2678c57a3c518020b5fdc8f70d3e SHA256 f42b36d0d12c88e51a04f26b917befc91eba002df7fe0c0475d954bdd31747d5
-MISC ChangeLog 277 RMD160 6f54318283bae817d8f19c1ad2900bb3de04a42c SHA1 623d9fc0fca59b04ede245a657f34d69a574574a SHA256 b77065419027145923993075233559ad891c594bee0da698292b6f91e654f9b2
+EBUILD emacs-23.ebuild 422 RMD160 58950fe28dfc7e53770e08371b954b9cfeb2d092 SHA1 d67b639af8d63f4985d464c8ac235a6d43449d2c SHA256 58e2bae46f4e4bbd951f0af81c8bbc48ab35e522ac7632181bf72b177c9d6200
+MISC ChangeLog 464 RMD160 31b3222063845cb449bffe54424f8c4ce2e82a9b SHA1 977bcfeff9507d317514949d1484ff60e2676e82 SHA256 4d0f8e44d4bb30daf8e72024bef46db48eec9730fac71e6b3e80f418ca8677cb
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
