@@ -2,6 +2,8 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
+EAPI=2
+
 DESCRIPTION="Virtual for GNU Emacs"
 HOMEPAGE=""
 SRC_URI=""
@@ -12,7 +14,6 @@ KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~sparc-fbs
 IUSE=""
 
 DEPEND=""
-RDEPEND="|| ( =app-editors/emacs-23*
-		>=app-editors/emacs-cvs-23
-		>=app-editors/emacs-cedet-branch-23
-		>=app-editors/emacs-lexbind-23 )"
+RDEPEND="|| ( app-editors/emacs:23
+		app-editors/emacs-cvs:23
+		app-editors/emacs-lexbind:23 )"
